# rust-mongo-poc

./: Cargo.toml
src/: main.rs
src/domain/: account.rs  account_service.rs  mod.rs
src/domain/infrastructure/: account_repository.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repository/: mod.rs
src/infrastructure/repository/mongo_db/: account_repository.rs  connection_factory.rs  mod.rs
src/infrastructure/repository/mongo_db/model/: account.rs
src/tests/repositories/: account.rs  mod.rs
